--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0"?>
 
-<!--
-  Pour plus d'informations sur la configuration de votre application ASP.NET, consultez
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
 
   <system.web>
@@ -44,27 +40,19 @@
       <rules>
         <rule name="Actualites" stopProcessing="true">
           <match url="^Actualites-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="Actualites.aspx?id={R:1}" />
-        </rule>
-        <rule name="Dictionnaire" stopProcessing="true">
-          <match url="^Dictionnaire-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="Dictionnaire.aspx?id={R:1}" />
-        </rule>
-        <rule name="JPOs" stopProcessing="true">
-          <match url="^JPOs-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="JPOs.aspx?id={R:1}" />
+          <action type="Rewrite" url="Actualites.aspx?Id={R:1}" />
         </rule>
         <rule name="Conferences" stopProcessing="true">
           <match url="^Conferences-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="Conferences.aspx?id={R:1}" />
+          <action type="Rewrite" url="Conferences.aspx?Id={R:1}" />
         </rule>
         <rule name="Salons" stopProcessing="true">
           <match url="^Salons-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="Salons.aspx?id={R:1}" />
+          <action type="Rewrite" url="Salons.aspx?Id={R:1}" />
         </rule>
         <rule name="Membres" stopProcessing="true">
           <match url="^Membres-([0-9]+)-(.*).aspx" />
-          <action type="Rewrite" url="Membres.aspx?id={R:1}" />
+          <action type="Rewrite" url="Membres.aspx?Id={R:1}" />
         </rule>
       </rules>
     </rewrite>
@@ -76,49 +64,41 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IClasseReader" />
         <binding name="BasicHttpBinding_IConferenceReader" />
         <binding name="BasicHttpBinding_ILienReader" />
         <binding name="BasicHttpBinding_IMembreReader" />
         <binding name="BasicHttpBinding_INewsReader" maxReceivedMessageSize="1000000" />
         <binding name="BasicHttpBinding_IProjetReader" />
         <binding name="BasicHttpBinding_IPubliciteReader" />
-        <binding name="BasicHttpBinding_IRoleReader" />
         <binding name="BasicHttpBinding_ISalonReader" />
         <binding name="BasicHttpBinding_IVilleReader" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IClasseReader"
-        contract="Webservice.IClasseReader" name="BasicHttpBinding_IClasseReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IConferenceReader"
-        contract="Webservice.IConferenceReader" name="BasicHttpBinding_IConferenceReader" />
+        contract="ReadersService.IConferenceReader" name="BasicHttpBinding_IConferenceReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILienReader"
-        contract="Webservice.ILienReader" name="BasicHttpBinding_ILienReader" />
+        contract="ReadersService.ILienReader" name="BasicHttpBinding_ILienReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMembreReader"
-        contract="Webservice.IMembreReader" name="BasicHttpBinding_IMembreReader" />
+        contract="ReadersService.IMembreReader" name="BasicHttpBinding_IMembreReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_INewsReader"
-        contract="Webservice.INewsReader" name="BasicHttpBinding_INewsReader" />
+        contract="ReadersService.INewsReader" name="BasicHttpBinding_INewsReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProjetReader"
-        contract="Webservice.IProjetReader" name="BasicHttpBinding_IProjetReader" />
+        contract="ReadersService.IProjetReader" name="BasicHttpBinding_IProjetReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPubliciteReader"
-        contract="Webservice.IPubliciteReader" name="BasicHttpBinding_IPubliciteReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRoleReader"
-        contract="Webservice.IRoleReader" name="BasicHttpBinding_IRoleReader" />
+        contract="ReadersService.IPubliciteReader" name="BasicHttpBinding_IPubliciteReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISalonReader"
-        contract="Webservice.ISalonReader" name="BasicHttpBinding_ISalonReader" />
+        contract="ReadersService.ISalonReader" name="BasicHttpBinding_ISalonReader" />
       <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVilleReader"
-        contract="Webservice.IVilleReader" name="BasicHttpBinding_IVilleReader" />
+        contract="ReadersService.IVilleReader" name="BasicHttpBinding_IVilleReader" />
     </client>
   </system.serviceModel>
 </configuration>
