--- a/Jupiter/Web.config
+++ b/Jupiter/Web.config
@@ -63,42 +63,66 @@
   </system.webServer>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IConferenceReader" />
-        <binding name="BasicHttpBinding_ILienReader" />
-        <binding name="BasicHttpBinding_IMembreReader" />
-        <binding name="BasicHttpBinding_INewsReader" maxReceivedMessageSize="1000000" />
-        <binding name="BasicHttpBinding_IProjetReader" />
-        <binding name="BasicHttpBinding_IPubliciteReader" />
-        <binding name="BasicHttpBinding_ISalonReader" />
-        <binding name="BasicHttpBinding_IVilleReader" />
-      </basicHttpBinding>
+        <basicHttpBinding>
+            <binding name="BasicHttpBinding_IConferenceReader" />
+            <binding name="BasicHttpBinding_ILienReader" />
+            <binding name="BasicHttpBinding_IMembreReader" />
+            <binding name="BasicHttpBinding_INewsReader" maxReceivedMessageSize="1000000" />
+            <binding name="BasicHttpBinding_IProjetReader" />
+            <binding name="BasicHttpBinding_IPubliciteReader" />
+            <binding name="BasicHttpBinding_ISalonReader" />
+            <binding name="BasicHttpBinding_IVilleReader" />
+            <binding name="BasicHttpBinding_ILinkReader" />
+            <binding name="BasicHttpBinding_IMemberReader" />
+            <binding name="BasicHttpBinding_IProjectReader" />
+            <binding name="BasicHttpBinding_ISlideReader" />
+            <binding name="BasicHttpBinding_IShowReader" />
+            <binding name="BasicHttpBinding_ICampusReader" />
+        </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IConferenceReader"
-        contract="ReadersService.IConferenceReader" name="BasicHttpBinding_IConferenceReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILienReader"
-        contract="ReadersService.ILienReader" name="BasicHttpBinding_ILienReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMembreReader"
-        contract="ReadersService.IMembreReader" name="BasicHttpBinding_IMembreReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_INewsReader"
-        contract="ReadersService.INewsReader" name="BasicHttpBinding_INewsReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProjetReader"
-        contract="ReadersService.IProjetReader" name="BasicHttpBinding_IProjetReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPubliciteReader"
-        contract="ReadersService.IPubliciteReader" name="BasicHttpBinding_IPubliciteReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISalonReader"
-        contract="ReadersService.ISalonReader" name="BasicHttpBinding_ISalonReader" />
-      <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVilleReader"
-        contract="ReadersService.IVilleReader" name="BasicHttpBinding_IVilleReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILienReader"
+            contract="ReadersService.ILienReader" name="BasicHttpBinding_ILienReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMembreReader"
+            contract="ReadersService.IMembreReader" name="BasicHttpBinding_IMembreReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProjetReader"
+            contract="ReadersService.IProjetReader" name="BasicHttpBinding_IProjetReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPubliciteReader"
+            contract="ReadersService.IPubliciteReader" name="BasicHttpBinding_IPubliciteReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISalonReader"
+            contract="ReadersService.ISalonReader" name="BasicHttpBinding_ISalonReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IVilleReader"
+            contract="ReadersService.IVilleReader" name="BasicHttpBinding_IVilleReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IConferenceReader"
+            contract="ReadersService.IConferenceReader" name="BasicHttpBinding_IConferenceReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILinkReader"
+            contract="ReadersService.ILinkReader" name="BasicHttpBinding_ILinkReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IMemberReader"
+            contract="ReadersService.IMemberReader" name="BasicHttpBinding_IMemberReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_INewsReader"
+            contract="ReadersService.INewsReader" name="BasicHttpBinding_INewsReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProjectReader"
+            contract="ReadersService.IProjectReader" name="BasicHttpBinding_IProjectReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISlideReader"
+            contract="ReadersService.ISlideReader" name="BasicHttpBinding_ISlideReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IShowReader"
+            contract="ReadersService.IShowReader" name="BasicHttpBinding_IShowReader" />
+        <endpoint address="http://www.epsilab.net/webservices/ReadersService.svc"
+            binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICampusReader"
+            contract="ReadersService.ICampusReader" name="BasicHttpBinding_ICampusReader" />
     </client>
   </system.serviceModel>
 </configuration>
